# foretry

./: Cargo.toml
foretry-decl/: Cargo.toml
foretry-impl/: Cargo.toml
foretry-impl/src/: lib.rs
foretry-macro/: Cargo.toml
src/: lib.rs
