[package]
name = "foretry-impl"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# syn = { version = "1", features = ["full"] }
# proc-macro2 = "1"
# quote = "1"
